distributed/api-ingress.yaml

# https://doc.traefik.io/traefik/v3.0/routing/providers/kubernetes-ingress/
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: api
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: jonjon-api-stripprefix@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: api.rancher
      http:
        paths:
          - path: /book
            pathType: Prefix
            backend:
              service:
                name: api-book
                port:
                  number: 80
          - path: /song
            pathType: Prefix
            backend:
              service:
                name: api-song
                port:
                  number: 80
          - path: /video
            pathType: Prefix
            backend:
              service:
                name: api-video
                port:
                  number: 80
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: api-stripprefix
spec:
  stripPrefix:
    prefixes:
      - /book
      - /song
      - /video
