distributed/frontend-ingress.yaml
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: 2mc-frontend
spec:
  ingressClassName: traefik
  rules:
    - host: app.rancher
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mc-frontend
                port:
                  number: 80
